@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.23 2009-09-24 19:50:43 ub Exp $
+# $Id: CHANGES,v 1.993.2.24 2009-09-26 10:22:22 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.5 (2009/??/??)
+ - (2009/09/26) Fixed bug#4302 - Dashboard: Tickets Stats graph incorrect
+   (permission related).
  - (2009/09/24) Fixed bug#3909 - Optional TicketFreeTimes with AgentTicketCompose
     break when attaching a file
  - (2009/09/23) Fixed bug#4326 - Notification emails have empty lines by using
